--- a/public/pagina.html
+++ b/public/pagina.html
@@ -33,6 +33,9 @@
 </head>
 <body>
   <h1>PARANDO TODOS AS AÇÕES!</h1>
-  <a href="index.html">Voltar para a Página Inicial</a>
+
+  <!-- Aqui substitua por um link do React Router -->
+  <a href="/" class="react-link">Voltar para a Página Inicial</a>
+
 </body>
 </html>
